syntax = "proto3";

package pb;

// Hello 服务定义
service Hello {
  // hello word 测试
  rpc PostHello (HelloRequest) returns (HelloReply) {}
}

// 请求参数
message HelloRequest {
  string name = 1;
}

// 响应参数
message HelloReply {
  string word = 1;
}
